icon나름 마무리(핀은 못찾음)/faq 스크롤

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -144,7 +144,7 @@
                     android:padding="5dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:srcCompat="@drawable/icon_setting" />
+                    app:srcCompat="@drawable/ic_setting" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/cl_drawer_head"
