--- a/app/src/main/res/layout/dialog_ticket_point_notice.xml
+++ b/app/src/main/res/layout/dialog_ticket_point_notice.xml
@@ -64,7 +64,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="46dp"
             android:layout_marginStart="80dp"
-            android:src="@drawable/icon_touch_app"
+            app:srcCompat="@drawable/ic_touch_app"
             app:layout_constraintTop_toBottomOf="@id/tv_explain2"
             app:layout_constraintStart_toStartOf="parent" />
         <com.thustop_00.widgets.NotoTextView
@@ -104,7 +104,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="34dp"
-            android:src="@drawable/icon_spell_check"
+            app:srcCompat="@drawable/ic_spell_check"
             app:layout_constraintTop_toBottomOf="@id/tv_touch"
             app:layout_constraintStart_toStartOf="@id/tv_touch"
             app:layout_constraintEnd_toEndOf="@id/tv_touch"/>
