--- a/app/src/main/res/layout/fragment_boarding_application_detail.xml
+++ b/app/src/main/res/layout/fragment_boarding_application_detail.xml
@@ -69,7 +69,7 @@
                     app:layout_constraintBottom_toBottomOf="@+id/tv_departure"
                     app:layout_constraintStart_toEndOf="@id/tv_departure"
                     app:layout_constraintTop_toTopOf="@+id/tv_departure"
-                    app:srcCompat="@drawable/icon_small_arrow_black" />
+                    app:srcCompat="@drawable/ic_arrow_black" />
 
                 <com.thustop_00.widgets.NotoTextView
                     android:id="@+id/tv_destination"
