노선 변경 구현(테스트는 못해봄), 첫 실행 시 메인 화면 툴바 깜박거리는 문제 개선

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,7 @@
                 android:layout_height="@dimen/toolbar_height"
                 android:background="@color/Primary"
                 android:theme="?attr/actionBarTheme"
+                android:alpha="0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
