로그인 구현 중... 핸드폰 번호 조회 실패(업체 문의해야함)

--- a/app/src/main/res/layout/fragment_register_verification.xml
+++ b/app/src/main/res/layout/fragment_register_verification.xml
@@ -11,8 +11,7 @@
         android:id="@+id/background_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/white"
-        android:onClick="@{IDVerfrag::onBackgroundClick}">
+        android:background="@android:color/white">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline1"
@@ -22,231 +21,6 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_begin="?attr/actionBarSize" />
 
-
-
-        <Spinner
-            android:id="@+id/sp_nation"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:dropDownWidth="125dp"
-            android:overlapAnchor="false"
-            app:layout_constraintBottom_toBottomOf="@id/tv_nation"
-            app:layout_constraintEnd_toEndOf="@id/tv_nation"
-            app:layout_constraintStart_toStartOf="@id/tv_nation"
-            app:layout_constraintTop_toTopOf="@id/tv_nation" />
-
-        <com.thustop.thestop.widgets.NotoTextView
-            android:id="@+id/tv_nation"
-            style="@style/EtRegStyle"
-            android:layout_width="125dp"
-            android:layout_marginStart="18dp"
-            android:background="@drawable/bg_round25_grayf5"
-            android:gravity="center_vertical"
-            android:paddingStart="21dp"
-            android:text="@string/tv_verification_nation"
-            app:notoTextStyle="regular"
-            app:layout_constraintBottom_toBottomOf="@id/et_name"
-            app:layout_constraintEnd_toStartOf="@id/et_name"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/et_name"
-            app:layout_constraintVertical_chainStyle="packed" />
-
-        <com.thustop.thestop.widgets.NotoEditText
-            android:id="@+id/et_name"
-            style="@style/EtRegStyle"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="18dp"
-            android:background="@drawable/bg_round25_grayf5"
-            android:hint="@string/et_verification_name"
-            android:inputType="textPersonName"
-            android:maxLines="1"
-            android:paddingStart="21dp"
-            app:layout_constraintBottom_toTopOf="@id/layout_idNum"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/tv_nation"
-            app:layout_constraintTop_toTopOf="@id/guideline1"
-            app:layout_constraintVertical_bias="0.13999999"
-            app:layout_constraintVertical_chainStyle="packed" />
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/layout_idNum"
-            android:layout_height="wrap_content"
-            android:layout_width="0dp"
-            android:layout_marginTop="15dp"
-            android:background="@drawable/bg_round25_grayf5"
-            app:layout_constraintBottom_toTopOf="@id/layout_phoneNum"
-            app:layout_constraintEnd_toEndOf="@id/et_name"
-            app:layout_constraintStart_toStartOf="@id/tv_nation"
-            app:layout_constraintTop_toBottomOf="@id/et_name">
-
-            <com.thustop.thestop.widgets.NotoTextView
-                android:id="@+id/tv_idNum"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:background="@drawable/bg_round25_grayf5"
-                android:letterSpacing="0.2"
-                android:paddingTop="15dp"
-                android:paddingEnd="25dp"
-                android:paddingBottom="15dp"
-                android:text="●●●●●●"
-                android:textColor="#c4c4c4"
-                android:textSize="14sp"
-                app:layout_constraintBottom_toBottomOf="@id/layout_idNum"
-                app:layout_constraintEnd_toEndOf="@id/layout_idNum"
-                app:layout_constraintTop_toTopOf="@id/layout_idNum"
-                tools:ignore="HardcodedText" />
-
-            <View
-                android:id="@+id/hyphen"
-                android:layout_width="20dp"
-                android:layout_height="1dp"
-                android:background="@color/TextGray"
-                app:layout_constraintBottom_toBottomOf="@id/layout_idNum"
-                app:layout_constraintEnd_toEndOf="@id/layout_idNum"
-                app:layout_constraintStart_toStartOf="@id/layout_idNum"
-                app:layout_constraintTop_toTopOf="@id/layout_idNum" />
-
-            <com.thustop.thestop.widgets.NotoEditText
-                android:id="@+id/et_idNum1"
-                style="@style/EtRegStyle"
-                android:layout_marginStart="27dp"
-                android:background="@android:color/transparent"
-                android:hint="@string/et_verification_birth"
-                android:maxLength="6"
-                android:maxLines="1"
-                android:inputType="numberDecimal"
-                android:nextFocusRight="@id/et_idNum2"
-                android:letterSpacing="0.2"
-                app:layout_constraintBottom_toBottomOf="@id/layout_idNum"
-                app:layout_constraintEnd_toStartOf="@id/hyphen"
-                app:layout_constraintStart_toStartOf="@id/layout_idNum"
-                app:layout_constraintTop_toTopOf="@id/layout_idNum" />
-
-            <com.thustop.thestop.widgets.NotoEditText
-                android:id="@+id/et_idNum2"
-                android:background="@android:color/transparent"
-                android:inputType="numberDecimal"
-                style="@style/EtRegStyle"
-                android:layout_marginStart="10dp"
-                app:layout_constraintBottom_toBottomOf="@id/layout_idNum"
-                app:layout_constraintEnd_toEndOf="@id/tv_idNum"
-                app:layout_constraintStart_toEndOf="@id/hyphen"
-                app:layout_constraintTop_toTopOf="@id/layout_idNum" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/layout_phoneNum"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:background="@drawable/bg_round25_grayf5"
-            app:layout_constraintBottom_toTopOf="@id/et_code"
-            app:layout_constraintEnd_toStartOf="@id/bt_send"
-            app:layout_constraintStart_toStartOf="@id/layout_idNum"
-            app:layout_constraintTop_toBottomOf="@id/layout_idNum">
-
-            <Spinner
-                android:id="@+id/sp_agency"
-                android:layout_width="90dp"
-                style="@style/EtRegStyle"
-                android:textColor="@android:color/black"
-                android:textSize="14sp"
-                android:dropDownWidth="90dp"
-                android:overlapAnchor="false"
-                app:layout_constraintBottom_toBottomOf="@id/layout_phoneNum"
-                app:layout_constraintStart_toStartOf="@id/layout_phoneNum"
-                app:layout_constraintTop_toTopOf="@id/layout_phoneNum" />
-
-            <com.thustop.thestop.widgets.NotoTextView
-                android:id="@+id/tv_agency"
-                android:layout_width="90dp"
-                style="@style/EtRegStyle"
-                android:paddingStart="20dp"
-                android:gravity="center_vertical"
-                android:text="@string/tv_verification_agency"
-                android:textSize="14sp"
-                android:background="@drawable/bg_round25_grayf5"
-                app:layout_constraintBottom_toBottomOf="@id/layout_phoneNum"
-                app:layout_constraintStart_toStartOf="@id/layout_phoneNum"
-                app:layout_constraintTop_toTopOf="@id/layout_phoneNum" />
-
-            <com.thustop.thestop.widgets.NotoEditText
-                android:layout_width="0dp"
-                android:background="@android:color/transparent"
-                android:paddingStart="12dp"
-                style="@style/EtRegStyle"
-                android:hint="@string/et_verification_phone"
-                android:inputType="numberDecimal"
-                android:maxLength="11"
-                android:maxLines="1"
-                app:layout_constraintBottom_toBottomOf="@id/layout_phoneNum"
-                app:layout_constraintEnd_toEndOf="@id/layout_phoneNum"
-                app:layout_constraintStart_toEndOf="@id/sp_agency"
-                app:layout_constraintTop_toTopOf="@id/layout_phoneNum" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <com.thustop.thestop.widgets.NotoButton
-            android:id="@+id/bt_send"
-            android:layout_width="66dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="10dp"
-            android:background="@drawable/bg_round25_green"
-            android:onClick="@{IDVerfrag::onSendClick}"
-            android:text="@string/bt_verification_send"
-            android:textColor="@android:color/white"
-            android:textSize="14dp"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@id/layout_phoneNum"
-            app:layout_constraintEnd_toEndOf="@id/layout_idNum"
-            app:layout_constraintStart_toEndOf="@id/layout_phoneNum"
-            app:layout_constraintTop_toTopOf="@id/layout_phoneNum" />
-
-        <com.thustop.thestop.widgets.NotoEditText
-            android:id="@+id/et_code"
-            android:layout_marginTop="15dp"
-            android:paddingStart="42dp"
-            android:background="@drawable/bg_outline_gray_b6"
-            style="@style/EtRegStyle"
-            android:inputType="numberDecimal"
-            android:maxLength="11"
-            android:maxLines="1"
-            app:layout_constraintEnd_toEndOf="@id/bt_send"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="@id/layout_phoneNum"
-            app:layout_constraintTop_toBottomOf="@id/layout_phoneNum"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-
-        <com.thustop.thestop.widgets.NotoTextView
-            android:id="@+id/tv_timer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="27dp"
-            android:text="03:00"
-            android:letterSpacing="0.15"
-            android:textSize="14sp"
-            android:textColor="@color/Primary"
-            app:layout_constraintTop_toTopOf="@id/et_code"
-            app:layout_constraintEnd_toEndOf="@id/et_code"
-            app:layout_constraintBottom_toBottomOf="@id/et_code"
-            tools:ignore="HardcodedText" />
-
-        <com.thustop.thestop.widgets.NotoButton
-            android:id="@+id/bt_done"
-            style="@style/btStyle"
-            android:background="@drawable/bg_round25_graycf"
-            android:onClick="@{IDVerfrag::onDoneClick}"
-            android:text="@string/bt_verification_done"
-            android:textColor="@android:color/white"
-            android:textSize="16sp"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/et_code"
-            app:layout_constraintVertical_bias="0.24"
-            app:notoTextStyle="medium" />
 
         <WebView
             android:id="@+id/wv_certification"
